db1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: project-plato
  name: db1
  labels:
    app: db1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db1
  template:
    metadata:
      labels:
        app: db1
    spec:
      containers:
      - name: nginx
        image: nginx:1.16.1-alpine
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
      restartPolicy: Always
