db2-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project-plato
  name: db2-service
  labels:
    app: db2
spec:
  selector:
    app: db2
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 80
