np-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-backend
  namespace: project-plato
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Egress
  egress:
  - to:
      - podSelector:
          matchLabels:
            app: db1
    ports:
      - protocol: TCP
        port: 6379
  - to:
      - podSelector:
          matchLabels:
            app: db2
    ports:
      - protocol: TCP
        port: 5432
